# ethos

./: .dockerignore  .gitignore  Dockerfile  Ethos-Setup.cmd  LICENSE  README.md  ethos-docker.sh  ethos.cmd  ethos.ps1  eval100.py  pyproject.toml  requirements.txt  setup.sh  strength_test.py  trait_demo.py
data/: harmful.txt  harmless.txt  refusal_calibration.txt
ethos/: __init__.py  __main__.py  activations.py  bake.py  bake_trait.py  benchcode.py  benchmark.py  chat.py  cli.py  config.py  data.py  directions.py  discover.py  engine.py  evaluate.py  finetune.py  guard.py  model.py  optimize.py  projectors.py  prune.py  quant.py  reports.py  setup_wizard.py  steer.py  trait.py  tui.py  vllm_backend.py  vllm_serve.sh
